# rcn_py

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  rcn_d3.py
json/: esc_people.csv  rsd_preferred_name_dict.json  rsd_profilelink_dict.json  rsd_scopus_id_dict.json
notebook/: CrossRef.ipynb  Kalverla_datafile.html  ORCID.ipynb  RSD.ipynb  Verhoeven.html  Verhoeven_datafile.html  Workflow_D3.ipynb  cluster.ipynb  data.ipynb  data_acquisition.ipynb  database.ipynb  dataset.ipynb  network_analysis_package.ipynb  project_rsd.gexf  project_rsd.html  rsd.db  scholar.ipynb  scopus_find_by_name.ipynb  software_rsd.gexf  software_rsd.html  test.ipynb  test2.ipynb  tutorial.db  tutorial.db-journal  visualization.ipynb  workflow.ipynb
rcn_py/: __about__.py  data_storage.py  database.py  neo4j_rsd.py  neo4j_scopus.py  openalex.py  orcid.py  rsd.py  scholar.py  scopus.py  topic_modeling.py  visual.py
static/: index.html  index_v7.html  layout.js  test copy.html  test.html
static/D3_js/interaction/: canvas_move.js  info_table.js  tooltip.js
static/D3_js/networks/: build_graph.js  search.js  search_function.js  side_bar.js  side_bar_function.js
static/D3_js/profile/: chart_table.js  profile.js
static/D3_js/text_info_display/: chart_table.js
static/D3_js/tooltip/: tooltip.js
static/D3_js/zoom_drag/: node_click.js  node_move.js
static/JavaScript/item_layout/: layout.js  profile.js
static/JavaScript/network/: build_graph.js  search.js
static/JavaScript/reaction/: node_click.js  tooltip.js
tests/: __init__.py
