[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rcn-py"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "ZNBai", email = "bzn991206@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pybliometrics",
  "crossrefapi",
  "scholarly",
  "nltk",
  "gensim",
  "pyvis",
  "pandas",
  "requests",
  "numpy>=1.20.3",
  "networkx",
  "d3graph",
  "neo4j",
  "flask",
  "scikit-learn",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/NLeSC/rcn_py#readme"
Issues = "https://github.com/NLeSC/rcn_py/issues"
Source = "https://github.com/NLeSC/rcn_py"

[tool.hatch.version]
path = "rcn_py/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "black",
  "ruff",
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=rcn_py --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "rcn_py/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
